@@ -1,3 +1,7 @@
+2010-07-16  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gtable.R (.computeWidths): Trying to fix size of table object
+
 2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gedit.R: put in fix to handle NA values -- which were not
